header, nav, pie, and storycard style updates

--- a/components/Core/Header.css
+++ b/components/Core/Header.css
@@ -3,8 +3,13 @@
   align-items: center;
 }
 
-.Header .title {
+.Header .logo {
   margin: 0 0 0 4rem;
   font-size: 2rem;
   flex: 2 1 100%;
+}
+
+.logo {
+  height: 40px;
+  width: auto;
 }
