--- a/components/StoryCard/StoryCard.css
+++ b/components/StoryCard/StoryCard.css
@@ -1,9 +1,7 @@
 /* StoryCard Styles */
 
-.title {
-  color: #220f25;
-}
 
-p {
-  color: #706371;
+.Description {
+  max-width: 800px;
+  margin: 0 auto;
 }
