--- a/components/global.styles.css
+++ b/components/global.styles.css
@@ -61,43 +61,6 @@ body {
   flex-direction: column;
 }
 
-h1,
-.h1 {
-  font-size: 36px;
-  font-size: 2.25rem;
-  line-height: 2.625rem;
-}
-h2,
-.h2 {
-  font-size: 26px;
-  font-size: 1.625rem;
-  line-height: 2.125rem;
-}
-h3,
-.h3 {
-  font-size: 18px;
-  font-size: 1.125rem;
-  line-height: 1.625rem;
-}
-h4,
-.h4 {
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 1.375rem;
-}
-h5,
-.h5 {
-  font-size: 14px;
-  font-size: 0.875rem;
-  line-height: 1.125rem;
-}
-h6,
-.h6 {
-  font-size: 12px;
-  font-size: 0.75rem;
-  line-height: 0.9375rem;
-}
-
 .btc-text-onyx {
   color: #001732 !important;
   fill: #001732 !important;
@@ -158,7 +121,7 @@ h6,
 }
 
 a {
-  color: #ee4950;
+  color: rgba(238,73,80,1);
   text-decoration: none;
   cursor: pointer;
   border-bottom: 2px solid;
@@ -167,7 +130,7 @@ a {
 }
 
 a:hover {
-  color: #ee4950;
+  color: rgba(238,73,80,1);
   text-decoration: none;
   cursor: pointer;
   opacity: 1;
@@ -177,13 +140,58 @@ a:hover {
 
 /* Typography */
 
-h1 {
+h1,
+.h1 {
+  font-size: 36px;
+  font-size: 2.25rem;
+  line-height: 2.625rem;
   font-family: "filson-soft", sans-serif;
-  font-size: 2em;
-  font-weight: 700;
+  font-weight: 900;
+}
+h2,
+.h2 {
+  font-size: 26px;
+  font-size: 1.625rem;
+  line-height: 2.125rem;
+  font-family: "filson-soft", sans-serif;
+  font-weight: 900;
+}
+h3,
+.h3 {
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.625rem;
+  font-family: "filson-soft", sans-serif;
+  font-weight: 900;
+}
+h4,
+.h4 {
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.375rem;
+  font-family: "filson-soft", sans-serif;
+  font-weight: 900;
+}
+h5,
+.h5 {
+  font-size: 14px;
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+  font-family: "filson-soft", sans-serif;
+  font-weight: 900;
+}
+h6,
+.h6 {
+  font-size: 12px;
+  font-size: 0.75rem;
+  line-height: 0.9375rem;
+  font-family: "filson-soft", sans-serif;
+  font-weight: 900;
 }
 
 p {
   font-family: "Merriweather", serif;
   font-size: 1em;
+  color: #706371;
+  
 }
