--- a/components/Pie/Pie.css
+++ b/components/Pie/Pie.css
@@ -4,12 +4,14 @@
   font-family: 'filson-soft', sans-serif;
   font-size: 1.5rem;
   font-weight: 300;
-  color: #706371;
+  color: #220f25;
+  fill: #220f25;
 }
 
 .donut-subtitle {
   font-family: 'filson-soft', sans-serif;
   font-weight: 300;
   color: #706371;
+  fill: #706371;
   text-transform: uppercase;
 }
