begins Hero component. Adds to Header story with Hero section

--- a/components/StoryCard/StoryLink.css
+++ b/components/StoryCard/StoryLink.css
@@ -17,6 +17,7 @@
 
 .StoryLink span {
   flex-wrap: nowrap;
+  transition: all .2s ease-in-out;
 }
 
 .StoryLink a:hover {
@@ -25,5 +26,5 @@
 }
 
 .StoryLink a:focus {
-  outline: none;
+    outline: none;
 }
