--- a/src/Navigation/NavRouterLink.css
+++ b/src/Navigation/NavRouterLink.css
@@ -12,7 +12,7 @@ li a {
     font-weight: 900;
     text-transform: uppercase;
     text-decoration: none;
-    padding: 1rem 0;
+    padding: 1rem;
     /*line-height: 2rem;*/
 }
 
