--- a/src/components/MyTest/Tooltip.css
+++ b/src/components/MyTest/Tooltip.css
@@ -7,7 +7,9 @@
     opacity: .9;
     color: black;
     padding: 10px;
-    width: 300px;
+    bottom: 10;
+    right: 10;
+    width: 100px;
     font-size: 12px;
     z-index: 10;
 }
