--- a/src/components/MyTest/Tooltip.css
+++ b/src/components/MyTest/Tooltip.css
@@ -1,5 +1,7 @@
 .tooltip {
     position: absolute;
+    top: 100px;
+    left: 100px;
     -moz-border-radius:5px;
     border-radius: 5px;
     border: 2px solid #000;
@@ -7,15 +9,15 @@
     opacity: .9;
     color: black;
     padding: 10px;
-    bottom: 10;
-    right: 10;
-    width: 100px;
+    height: 100px;
+    width: 200px;
     font-size: 12px;
     z-index: 10;
 }
 
 .tooltip .title {
-	font-size: 13px;
+	font-size: 20px;
+  color: #00cc99;
 }
 
 .tooltip .name {
