--- a/src/template.ejs
+++ b/src/template.ejs
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
   <title>Hack Oregon Project Title</title>
-  <style>html, body { padding:0; margin:0; }</style>
+  <style>html, body { padding:0; margin:auto; max-width:800px }</style>
 </head>
 <body>
 <div id="content"></div>
