--- a/src/template.ejs
+++ b/src/template.ejs
@@ -7,8 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
   <title>Hack Oregon - Budget</title>
+  <script src="https://use.fontawesome.com/e38842726f.js"></script>
 </head>
-<body>
+<body style="max-width:800px; margin: auto;">
 <div id="content"></div>
 </body>
 </html>
