--- a/src/components/CardCollection/CardCollection.css
+++ b/src/components/CardCollection/CardCollection.css
@@ -12,6 +12,7 @@
 }
 
 .budget-card-collection__sticky-controller {
+  position: relative;
   padding: 0.5rem;
   padding-bottom: 2rem;
   background: white;
@@ -27,7 +28,9 @@
 }
 
 .Card {
+  margin-top: 2rem;
   max-width: 800px;
+  border: 2px solid #aaa4ab;
 }
 
 .Card .Title.Rubik {
@@ -36,4 +39,8 @@
 
 .budget-green {
   color: #329f7c;
+}
+
+.budget-current-year {
+  font-weight: bold;
 }
