--- a/src/template.ejs
+++ b/src/template.ejs
@@ -6,7 +6,7 @@
   <% } %>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
-  <title>Hack Oregon Project Title</title>
+  <title>Hack Oregon - Transportation</title>
   <style>html, body { padding:0; margin:auto; max-width:800px }</style>
 </head>
 <body>
