put card behind sticky controller with z-index

--- a/src/components/CardCollection/CardCollection.css
+++ b/src/components/CardCollection/CardCollection.css
@@ -1,5 +1,6 @@
 /* budget-heading green : #329f7c */
 
+
 .budget-card-collection__intro-hero {
   padding: 1rem;
   background: #f0f0f0;
@@ -9,6 +10,11 @@
 .budget-heading {
   color: #329f7c;
   font-weight: bold;
+}
+
+.budget-card-collection__sticky-container {
+  position: relative;
+  z-index: 0;
 }
 
 .budget-card-collection__sticky-controller {
@@ -31,6 +37,9 @@
   margin-top: 2rem;
   max-width: 800px;
   border: 2px solid #aaa4ab;
+  /* puts card children behind sticky controller */
+  position: relative;
+  z-index: -1;
 }
 
 .Card .Title.Rubik {
