--- a/packages/housing/src/template.ejs
+++ b/packages/housing/src/template.ejs
@@ -6,7 +6,7 @@
   <% } %>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
-  <title>Civic: A Hack Oregon Project</title>
+  <title>Civic: A Hack Oregon Project - Housing</title>
   <style>html, body { padding:0; margin:0; }</style>
 </head>
 <body>
