--- a/packages/platform/src/views/AboutPage/styles.css
+++ b/packages/platform/src/views/AboutPage/styles.css
@@ -50,7 +50,7 @@
 }
 
 .Platform.Hero .Explore {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   width: 100%;
   margin: 0 auto;
   font-weight: 500;
@@ -357,7 +357,7 @@
 a.Tag {
   border: 2px solid rgba(255,255,255,0.85);
   padding: 10px;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   color: rgba(255,255,255,0.85);
   font-size: 1.25em;
@@ -384,7 +384,7 @@ a.Link {
 a.Link {
   color: rgba(255,255,255,0.85);
     padding: 6px 6px 6px 6px;
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: 500;
 }
 
