--- a/packages/platform/src/views/HomePage/styles.css
+++ b/packages/platform/src/views/HomePage/styles.css
@@ -51,7 +51,7 @@
 }
 
 .Platform.Hero .Explore {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   width: 100%;
   margin: 0 auto;
   font-weight: 500;
@@ -315,7 +315,7 @@
 }
 
 .Collection.Hero.Housing {
-  background-image:assets/collection-hero-housing.jpg');
+  background-image:('assets/collection-hero-housing.jpg');
 }
 
 .Collection.Hero.Budget {
@@ -378,7 +378,7 @@
 a.Tag {
   border: 2px solid rgba(255,255,255,0.85);
   padding: 10px;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   color: rgba(255,255,255,0.85);
   font-size: 1.25em;
@@ -405,7 +405,7 @@ a.Link {
 a.Link {
   color: rgba(255,255,255,0.85);
     padding: 6px 6px 6px 6px;
-    font-family: 'Rubik', sans-serif;
+    font-family: "Rubik", sans-serif;
     font-weight: 500;
 }
 
