--- a/packages/component-library/assets/global.styles.css
+++ b/packages/component-library/assets/global.styles.css
@@ -143,11 +143,16 @@ a:hover {
 /* Global Styles from product_design */
 
 /* Typography */
-
+.Description {
+  max-width: 900px;
+  margin: 0 auto;
+  text-align: left;
+  line-height: 1.7;
+}
 
 .Title {
   font-size: 50px;
-  line-height: 1.5;
+  line-height: 1.2;
   font-weight: 500;
   font-family: "filson-soft", sans-serif;
   margin-bottom: 12px;
