--- a/packages/housing/src/components/App/app.styles.css
+++ b/packages/housing/src/components/App/app.styles.css
@@ -1,6 +1,6 @@
 /*
  * This is to make sure the dropdown menu appears on top of the
- * leaflet map pane (z-index 404).
+ * map pane (z-index 404).
  */
 .Select-menu-outer {
   z-index: 1404 !important;
