--- a/packages/budget/src/components/Budget101/stub.css
+++ b/packages/budget/src/components/Budget101/stub.css
@@ -2,7 +2,7 @@ html {
   font-size: 16px;
   line-height: 1.35em;
   background-color: offwhite;
-  font-family: 'Merriweather', sans-serif;
+  font-family: "Merriweather", sans-serif;
   font-weight: 400;
   color: midnight;
   min-height: 100% /* [3] */;
@@ -53,7 +53,7 @@ h1 {
   font-size: 36px;
   font-size: 2.25rem;
   line-height: 2.625rem;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 100;
 }
 
@@ -62,7 +62,7 @@ h2 {
   font-size: 26px;
   font-size: 1.625rem;
   line-height: 2.125rem;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 700;
 }
 
@@ -71,7 +71,7 @@ h3 {
   font-size: 18px;
   font-size: 1.125rem;
   line-height: 1.625rem;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 700;
 }
 
@@ -80,7 +80,7 @@ h4 {
   font-size: 16px;
   font-size: 1rem;
   line-height: 1.375rem;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 700;
 }
 
@@ -89,7 +89,7 @@ h5 {
   font-size: 14px;
   font-size: 0.875rem;
   line-height: 1.125rem;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
 }
 
@@ -98,12 +98,12 @@ h6 {
   font-size: 12px;
   font-size: 0.75rem;
   line-height: 0.9375rem;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 500;
 }
 
 p {
-  font-family: 'Merriweather', serif;
+  font-family: "Merriweather", serif;
   font-size: 1em;
   color: #706371;
 }
