--- a/packages/component-library/src/Slider/slider.css
+++ b/packages/component-library/src/Slider/slider.css
@@ -9,30 +9,30 @@
 }
 
 .civic-slider-container .rc-slider-track {
-  background-color: #25b29e;
+  background-color: #1e62bd;
   height: 4px;
 }
 
 .civic-slider-container .rc-slider-handle {
-  border-color: #25b29e;
-  background-color: #25b29e;
+  border-color: #1e62bd;
+  background-color: #1e62bd;
   width: 14px;
   height: 14px;
 }
 
 .civic-slider-container .rc-slider-handle:active {
-  box-shadow: 0 0 5px #25b29e;
+  box-shadow: 0 0 5px #1e62bd;
 }
 
 .civic-slider-container .rc-slider-handle:hover {
-  border-color: #25b29e;
+  border-color: #1e62bd;
 }
 
 .civic-slider-container
   .rc-slider-tooltip-placement-points-bc-tc
   .rc-slider-tooltip-arrow {
-  border-top-color: #25b29e;
+  border-top-color: #1e62bd;
 }
 .civic-slider-container .rc-slider-dot-active {
-  border-color: #25b29e;
+  border-color: #1e62bd;
 }
