--- a/packages/component-library/src/fonts.css
+++ b/packages/component-library/src/fonts.css
@@ -6,3 +6,6 @@
 
 /* Roboto Condensed for data and tiny type */
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i");
+
+/* Roboto Mono for code */
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400");
